Add help command listing all the available commands with their description

--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -10,5 +10,9 @@
   },
   "get_card_cmd": {
     "card_not_found": "Card {1} does not exist."
+  },
+  "help_cmd": {
+    "title": "Help",
+    "description": "List of available commands"
   }
 }
