Add booster command returning only one card and always the same

--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -14,5 +14,9 @@
   "help_cmd": {
     "title": "Help",
     "description": "List of available commands"
+  },
+  "booster_cmd": {
+    "title": "Booster",
+    "description": "You don't keep these cards unfortunately, it's just a demo"
   }
 }
