Add more jokes :)

--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -31,6 +31,16 @@
     "joke_7": "Is that a Bellsprout in your pants or are you just happy to see me?",
     "joke_8": "What did Pikachu say when ash fell off a cliff?\n\n “Pikachu”, that’s all he can say.",
     "joke_9": "What is a Primeape? A Mankey which became an expert in trolling.",
-    "joke_10": "Hey miss you are so fresh.\n\n I wish I could Wobbuffet you!"
+    "joke_10": "Hey miss you are so fresh.\n\n I wish I could Wobbuffet you!",
+    "joke_11": "What noise is a firearm making ? Rattata.",
+    "joke_12": "What does a Pokémon player take to not stink? Some Deoxys.",
+    "joke_13": "Go make your Jynx on my Jigglypuff.",
+    "joke_14": "Do you want to see my Poké Balls?",
+    "joke_15": "It's not because of the team that I'm called the Rocket",
+    "joke_16": "Hi, do you want to see my Weedle?",
+    "joke_17": "When I see you it's Hydro Pump in my cheeky.",
+    "joke_18": "I overheard someone telling Pokémon jokes, but I couldn't catch 'em all.",
+    "joke_19": "According to recent surveys, fans of Pokémon love electric type the most. These results are shocking.",
+    "joke_20": "Why should you always bring Charmander camping?\n\nHe's the fire starter."
   }
 }
