--- a/localization/localization_fr.json
+++ b/localization/localization_fr.json
@@ -31,6 +31,16 @@
     "joke_7": "Y a-t-il un Chétiflor dans ton pantalon ou es-tu juste content de me voir ?",
     "joke_8": "Qu'a dit Pikachu quand Sacha est tombé de la falaise ?\n\n “Pikachu”, c'est tout ce qu'il sait dire.",
     "joke_9": "Qu'est-ce qu'un Colossinge ? Un Férosinge devenu expert en trollage.",
-    "joke_10": "Hé madame t'es trop fraîche, j'ai envie de te Qulbutoker."
+    "joke_10": "Hé madame t'es trop fraîche, j'ai envie de te Qulbutoker.",
+    "joke_11": "Quel bruit fait une arme à feu ? Rattata.",
+    "joke_12": "Que met un joueur de pokemon pour ne pas puer ? Du déo xys",
+    "joke_13": "Viens faire Lippoutou sur mon Rondoudou",
+    "joke_14": "Tu veux voir mes Poké Balls ?",
+    "joke_15": "C'est pas pour la team qu'on m'appelle le Rocket",
+    "joke_16": "Coucou, tu veux voir mon Aspicot ?",
+    "joke_17": "Quand je te vois c'est Hydrocanon dans ma culotte",
+    "joke_18": "J'ai entendu quelqu'un raconter des blagues Pokémon, mais je ne pouvais pas tous les attraper.",
+    "joke_19": "Selon des études récentes, le type préféré des fans de Pokémon est le type Electrique. Ces résultats sont foudroyants.",
+    "joke_20": "Pourquoi devez-vous toujours amener un Salamèche avec vous pour le camping?\n\nParce qu'il est le Pokémon de départ de feu."
   }
 }
