Add even more jokes

--- a/localization/localization_fr.json
+++ b/localization/localization_fr.json
@@ -33,14 +33,25 @@
     "joke_9": "Qu'est-ce qu'un Colossinge ? Un Férosinge devenu expert en trollage.",
     "joke_10": "Hé madame t'es trop fraîche, j'ai envie de te Qulbutoker.",
     "joke_11": "Quel bruit fait une arme à feu ? Rattata.",
-    "joke_12": "Que met un joueur de pokemon pour ne pas puer ? Du déo xys",
-    "joke_13": "Viens faire Lippoutou sur mon Rondoudou",
+    "joke_12": "Que met un joueur de pokemon pour ne pas puer ? Du déo xys.",
+    "joke_13": "Viens faire Lippoutou sur mon Rondoudou.",
     "joke_14": "Tu veux voir mes Poké Balls ?",
-    "joke_15": "C'est pas pour la team qu'on m'appelle le Rocket",
+    "joke_15": "C'est pas pour la team qu'on m'appelle le Rocket.",
     "joke_16": "Coucou, tu veux voir mon Aspicot ?",
-    "joke_17": "Quand je te vois c'est Hydrocanon dans ma culotte",
+    "joke_17": "Quand je te vois c'est Hydrocanon dans ma culotte.",
     "joke_18": "J'ai entendu quelqu'un raconter des blagues Pokémon, mais je ne pouvais pas tous les attraper.",
-    "joke_19": "Selon des études récentes, le type préféré des fans de Pokémon est le type Electrique. Ces résultats sont foudroyants.",
-    "joke_20": "Pourquoi devez-vous toujours amener un Salamèche avec vous pour le camping?\n\nParce qu'il est le Pokémon de départ de feu."
+    "joke_19": "Selon des études récentes, le type préféré des fans de Pokémon est le type Electrique.\n\nCes résultats sont foudroyants.",
+    "joke_20": "Pourquoi devez-vous toujours amener un Salamèche avec vous pour le camping?\n\nParce qu'il est le Pokémon de départ de feu.",
+    "joke_21": "Comment appelle-t-on le lait d'un Écrémeuh drogué ?\n\nDu lait beubeu.",
+    "joke_22": "Comment appelle-t-on un papa Miaouss de couleur bleue ?\n\nUn père cyan.",
+    "joke_23": "Alors c'est Pikachu qui monte dans un car pour aller à l'école, mais quand il ressort il se gratte, pourquoi ?\n\nParce que c'était un car à puces.",
+    "joke_24": "Comment appelle-t-on une bande de 3 voyous qui volent des montres ? Un trio pique-heure.",
+    "joke_25": "Pourquoi Sacha ne prête jamais sa casquette aux pokemon chat ?\n\nParce qu'il a des poux, Sacha...",
+    "joke_26": "Le paresseux il est pas sympa, pourtant il paraît cool.",
+    "joke_27": "Comment appelle-t-on un lit qui brille ?\n\nUn lit néon.",
+    "joke_28": "- Bonjour Monsieur, est-ce que vous avez la figurine collector de Green Lanturn ? \n- Ah non, désolé mais elle est en rupture de Rhina-stock.",
+    "joke_29": "Comment appelle-t-on un enfant qui joue au Pôle Nord ?\n\n Un môme arctique.",
+    "joke_30": "- Alors les enfants, c'est quoi votre Régi préféré ? \n- Régisteel !\n- Moi c'est Régirock !\n- Régice ! C'est le meilleur !!\n- Et toi c'est lequel ? \n- Souriez, Régilait !",
+    "joke_31": "Comment appelle-t-on un gros poisson qui se déplace dans tous les sens ?\n\n Un Zigza-thon."
   }
 }
