--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -41,6 +41,17 @@
     "joke_17": "When I see you it's Hydro Pump in my cheeky.",
     "joke_18": "I overheard someone telling Pokémon jokes, but I couldn't catch 'em all.",
     "joke_19": "According to recent surveys, fans of Pokémon love electric type the most. These results are shocking.",
-    "joke_20": "Why should you always bring Charmander camping?\n\nHe's the fire starter."
+    "joke_20": "Why should you always bring Charmander camping?\n\nHe's the fire starter.", 
+    "joke_21": "How is the milk of a drugged Miltank called?\n\nWeewee Milk.",
+    "joke_22": "What is the favorite color of a Meowth?\n\nCyan, because they wish to be a Per-sian.",
+    "joke_23": "What does one Geodude say to the other Geodude?\n\n Let’s rock!",
+    "joke_24": "What appears over Ash’s head when he gets an idea?\n\n A LightBulbasaur.",
+    "joke_25": "What do you call a Pokemon that wants to be a police officer?\n\n Magic-cop!",
+    "joke_26": "How do you get Pikachu on a bus?\n\nPoke him on!",
+    "joke_27": "Why are Zigzagoon lying during mid-day ?\n\nBecause they want to evolve into Li-noone.",
+    "joke_28": "- Hello Sir, do you have the collector figurine of Green Lanturn ? \n- Well no, sorry but it is out of Stock.",
+    "joke_29": "Which Pokémon could also be a pirate?\n\n Arrrrrr-ceus.",
+    "joke_30": "What’s Wailord’s favorite TV show?\n\n Whale of Fortune.",
+    "joke_31": "What do you call a scout that likes to chew gum while climbing Pikes Peak?\n\n A Peak-A-Chewer!"
   }
 }
