--- a/localization/localization_fr.json
+++ b/localization/localization_fr.json
@@ -22,7 +22,8 @@
   },
   "booster_cmd": {
     "title": "Booster",
-    "description": "Vous ne conservez pas les cartes malheureusement, ce n'est qu'une démonstration"
+    "description": "Vous ne conservez pas les cartes malheureusement, ce n'est qu'une démonstration",
+    "cooldown": "Prochain booster gratuit :"
   },
   "drop_rates_cmd": {
     "title": "Taux de drop",
