Add collection command to see all cards in your collection

--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -69,5 +69,8 @@
   },
   "search_cmd": {
     "not_found": "No result for search `{1}`."
+  },
+  "collection_cmd": {
+    "empty": "You don't have any card in your collection yet."
   }
 }
