--- a/localization/localization_fr.json
+++ b/localization/localization_fr.json
@@ -69,5 +69,8 @@
   },
   "search_cmd": {
     "not_found": "Aucun résultat ne correspond à la recherche `{1}`."
+  },
+  "collection_cmd": {
+    "empty": "Vous n'avez pas encore de carte dans votre collection."
   }
 }
