Add new kind of "standard" booster: Promo booster

--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -24,6 +24,10 @@
     "title": "Booster",
     "cooldown": "Next free booster:"
   },
+  "promo_booster_cmd": {
+    "title": "Promo Booster",
+    "cooldown": "Next free Promo booster:"
+  },
   "drop_rates_cmd": {
     "title": "Drop rates",
     "description": "Drop for the last card of a basic booster"
