Fix collection command and let it support image mode view, and add more interesting fields (card name, rarity)

--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -3,6 +3,8 @@
     "pokedollar": "Pokémon Dollar",
     "collection": "collection",
     "booster": "booster",
+    "rarity": "rarity",
+    "quantity": "quantity",
     "booster_cooldown": "Next free booster:",
     "promo_booster_cooldown": "Next free Promo booster:",
     "minutes": "minutes"
