Add possibility to see others players' collection

--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -82,6 +82,7 @@
     "not_found": "No result for search `{1}`."
   },
   "collection_cmd": {
+    "title": "Collection",
     "empty": "You don't have any card in your collection yet."
   }
 }
