Harmonize field display in collection, search and card + add set field

--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -4,6 +4,7 @@
     "collection": "collection",
     "booster": "booster",
     "rarity": "rarity",
+    "set": "set",
     "quantity": "quantity",
     "booster_cooldown": "Next free booster:",
     "promo_booster_cooldown": "Next free Promo booster:",
