--- a/localization/localization_fr.json
+++ b/localization/localization_fr.json
@@ -4,6 +4,7 @@
     "collection": "collection",
     "booster": "booster",
     "rarity": "rareté",
+    "set": "série",
     "quantity": "quantité",
     "booster_cooldown": "Prochain booster gratuit :",
     "promo_booster_cooldown": "Prochain booster Promo gratuit :",
