Add rankings command to get the top 50 users having the most cards

--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -97,5 +97,8 @@
   "collection_cmd": {
     "title": "Collection",
     "empty": "You don't have any card in your collection yet."
+  },
+  "ranking_cmd": {
+    "title": "User Collection Ranking"
   }
 }
