Track last interaction date for an user and display it in profile command

--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -9,6 +9,7 @@
     "booster_cooldown": "Next free booster:",
     "promo_booster_cooldown": "Next free Promo booster:",
     "minutes": "minutes",
+    "last_interaction": "Last interaction done date",
     "user_not_found": "User not found",
     "user_or_card_not_found": "User not found or they don't have the card",
     "not_allowed": "You are not allowed to use this command"
