--- a/localization/localization_fr.json
+++ b/localization/localization_fr.json
@@ -9,6 +9,7 @@
     "booster_cooldown": "Prochain booster gratuit :",
     "promo_booster_cooldown": "Prochain booster Promo gratuit :",
     "minutes": "minutes",
+    "last_interaction": "Date de la dernière interaction",
     "user_not_found": "L'utilisateur n'a pas été trouvé",
     "user_or_card_not_found": "L'utilisateur n'a pas été trouvé ou il ne possède pas la carte",
     "not_allowed": "Vous ne pouvez pas utiliser cette commande"
