--- a/localization/localization_fr.json
+++ b/localization/localization_fr.json
@@ -8,6 +8,7 @@
     "quantity": "quantité",
     "booster_cooldown": "Prochain booster gratuit :",
     "promo_booster_cooldown": "Prochain booster Promo gratuit :",
+    "daily_cooldown": "Prochain daily:",
     "minutes": "minutes",
     "last_interaction": "Date de la dernière interaction",
     "user_not_found": "L'utilisateur n'a pas été trouvé",
@@ -41,6 +42,9 @@
   "help_cmd": {
     "title": "Aide", 
     "description": "Liste des commandes disponibles"
+  },
+  "daily_cmd": {
+    "response_msg": "Vous récupérez {amount} Pokédollars"
   },
   "booster_cmd": {
     "title": "Booster"
