--- a/localization/localization_fr.json
+++ b/localization/localization_fr.json
@@ -3,6 +3,8 @@
     "pokedollar": "Pokédollar",
     "collection": "collection",
     "booster": "booster",
+    "basic_booster": "Booster de base",
+    "promo_booster": "Booster Promo",
     "rarity": "rareté",
     "set": "série",
     "quantity": "quantité",
@@ -51,6 +53,9 @@
   },
   "promo_booster_cmd": {
     "title": "Booster Promo"
+  },
+  "market_booster_cmd": {
+    "title": "Échoppe à Boosters"
   },
   "drop_rates_cmd": {
     "title": "Taux de drop",
