--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -62,6 +62,11 @@
     "not_enough_money": "You're too poor to buy these boosters",
     "success_buy": "Congratulations on your purchases"
   },
+  "send_cards_cmd": {
+    "same_user": "You can't send your cards to... yourself",
+    "missing_cards": "You do not own some of the cards you provided, transfer cancelled",
+    "cards_transferred": "Cards have been sent to {user}"
+  },
   "drop_rates_cmd": {
     "title": "Drop rates",
     "description": "Drop for the last card of a basic booster"
