--- a/localization/localization_fr.json
+++ b/localization/localization_fr.json
@@ -33,6 +33,9 @@
   "give_boosters_cmd": {
     "response_msg": "L'utilisateur {user} a reçu {quantity} booster(s) {kind}"
   },
+  "give_all_boosters_cmd": {
+    "response_msg": "Tous les utilisateurs ont reçu {quantity} booster(s) {kind}"
+  },
   "remove_card_cmd": {
     "response_msg": "L'utilisateur {user} a perdu la carte {card_id}"
   },
