Add daily command cooldown information

--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -99,6 +99,7 @@
   "cooldowns_cmd": {
     "title": "Commands' cooldown",
     "time_between_cmds": "Default timeout: ",
+    "midnight_reset": "Daily reset at midnight",
     "available": "Available"
   },
   "joke_cmd": {
