Add setting to force using option in booster commands to open boosters from stock

--- a/localization/localization_en.json
+++ b/localization/localization_en.json
@@ -46,6 +46,9 @@
     "booster_opening_with_image_field_name": "Booster opened with card images by default",
     "language_changed_response_msg": "Language changed to:",
     "booster_opening_with_image_response_msg": "Booster opening mode switched",
+    "booster_stock_use_field_name": "Only use stock boosters when called with option",
+    "booster_stock_use_response_msg": "Booster stock use changed",
+    "booster_stock_use_label": "Require option to use booster stock",
     "select_language_placeholder": "Change language",
     "switch_booster_opening_label": "Switch booster opening value"
   },
